--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ a {
   transition: all 0.5s ease-in-out;
   margin-top: 165px;
   margin-left: 125px;
+  font-size: 25px;
+
   color: #000;
 }
 
@@ -106,14 +108,16 @@ a {
 
 .filash1 {
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   background-color: #000;
-  width: 123px;
-  height: 60px;
+  width: 400px;
+  height: 68px;
   border-radius: 5px;
   text-align: center;
   font-weight: bold;
   color: #fff;
+  font-size: 30px;
+  padding-top: 10px;
   transition: all 500ms;
 }
 
@@ -125,34 +129,38 @@ a {
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: #000;
-  width: 123px;
+  width: 340px;
   height: 60px;
   border-radius: 5px;
   text-align: left;
   font-weight: bold;
+  font-size: 30px;
+  line-height: 20px;
   color: #fff;
+  margin-left: 38px;
   transition: all 500ms;
   cursor: default;
 }
 
 
 .column1 {
-  margin: 5px;
+  margin-left: -10px;
 }
 
 .col-her {
-  margin-left: 290px;
+  margin-left: 191px;
   height: 100px;
 }
 
 .conte {
-  padding-top: 125px;
+  padding-top: 33px;
 }
 
 .head1 {
-  margin-left: -3px !important;
+  margin-left: -27px !important;
   margin-bottom: -2px;
   text-align: center;
+  width: 113%;
 }
 
 .boton {
@@ -174,7 +182,17 @@ a {
   transition: all 500ms;
 }
 
+.btnTit h1 {
+  font-size: 74px;
+}
 
+.btnTit h3 {
+  font-size: 46px;
+}
+
+.btnTit p {
+  font-size: 29px;
+}
 
 .equis {
   position: absolute;
@@ -210,8 +228,8 @@ a {
 .regresar2 {
   position: absolute;
   font-size: 40px;
-  margin-left: 22px;
-  margin-top: 34px;
+  margin-left: 15px;
+  margin-top: -63px;
   background-color: red;
   color: #fff;
   border-radius: 50%;
@@ -235,11 +253,30 @@ a {
   width: 300px;
   margin-left: -84px !important;
 }
-.mas{
+
+.mas {
   position: absolute;
   color: #fff;
-  margin-top: -19px !important;
-  margin-left: -450px;
-  font-size: 22px;
+  margin-top: -27px !important;
+  margin-left: -21px;
+  font-size: 27px;
   cursor: pointer;
+}
+
+.row button {
+  font-size: 33px;
+}
+
+.filaher-2 {
+  margin-left: 20px;
+  padding-left: 29px;
+  width: 112%;
+}
+
+.her3{
+  margin-left: 124px !important;
+}
+
+.headher3{
+  margin-bottom: -50px;
 }
